Fix image intro image size on small devices

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -711,6 +711,10 @@ input, select, textarea {
 				position: absolute;
 				margin-top: 6em;
 			}
+
+			#intro {
+				background-size: cover !important;
+			}
 		}
 
 		@media screen and (max-width: 500px) {
